--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.8.0",
     "float-ui": "^1.0.5",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.21.3"
+    "react-hook-form": "^7.50.1",
+    "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.21.3",
+    "react-simple-captcha": "^9.3.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
