--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
     "float-ui": "^1.0.5",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.3",
     "react-simple-captcha": "^9.3.1",
