--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@stripe/stripe-js": "^3.0.10",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
