--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@stripe/stripe-js": "^3.0.10",
     "@tanstack/react-query": "^5.24.1",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.6.7",
-    "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
     "float-ui": "^1.0.5",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.50.1",
