--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.44.0",
     "vite": "^5.0.8"
   }
 }
